@@ -5,6 +5,10 @@
 	Correctly call gui_tool, fix wm.	
 
 2006-04-27  Don Allingham  <don@gramps-project.org>
+	* src/Editors/_EditPerson.py (EditPerson._create_tabbed_pages): 
+	initialize load_image callback
+	* src/DisplayTabs.py (GalleryTab): call callback if defined when
+	the list is updated, handle reorder inserting of None objects
 	* src/ViewManager.py: fix top on Config.set calls
 	* data/gramps.schemas.in: remove toolbar, now unused
 	* src/TipOfDay.py (TipOfDay.__init__): switch to ManagedWindow
